@@ -60,6 +60,8 @@ firefox-trunk (23.0~a1~hg20130426r129904-0ubuntu1) UNRELEASED; urgency=low
     - add debian/firefox-testsuite.lintian-overrides.in
   * Remove the executable bit from the testsuite zip file
     - update debian/build/rules.mk
+  * Remove the executable bit from searchplugins
+    - update debian/build/rules.mk
 
  -- Chris Coulson <chris.coulson@canonical.com>  Wed, 03 Apr 2013 17:19:15 +0100
 
